--- a/css/blocks/order-section.scss
+++ b/css/blocks/order-section.scss
@@ -3,4 +3,9 @@
   url("../img/icons/order-page/leaf.png") right 1% bottom 16% no-repeat,
   url("../img/icons/order-page/order-bg.jpg") center center/cover no-repeat;
   font-size: rem(18px);
+
+  @include tablets {
+  background:url("../img/icons/order-page/order-bg.jpg") center center/cover no-repeat;
+
+  }
 }
