--- a/css/blocks/benefits.scss
+++ b/css/blocks/benefits.scss
@@ -1,11 +1,19 @@
 .benefits {
   display: flex;
+  @include phones {
+    flex-direction: column;
+  }
+
 }
 
 .benefits__item {
   flex: 1;
   padding: 0 3%;
   position: relative;
+  @include phones {
+    padding: 0;
+    margin-bottom: rem(35px);
+  }
 
   &:before {
     content: url("../img/icons/why-page/separator.png");
@@ -13,6 +21,10 @@
     top: rem(30px);
     right: 0;
     transform: translateX(50%);
+
+    @include phones {
+      display: none;
+    }
   }
 
   &:first-child {
