--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -1,5 +1,12 @@
 .form {
   display: flex;
+  @include tablets {
+    flex-direction: column;
+    padding: 0 16%;
+  }
+  @include phones {
+    padding: 0;
+  }
 }
 
 .form__col {
@@ -7,6 +14,10 @@
   margin-right: rem(20px);
 
   &:last-child {
+    margin-right: 0;
+  }
+
+  @include tablets {
     margin-right: 0;
   }
 }
@@ -44,4 +55,11 @@
 .form__controls {
   display: flex;
   flex-wrap: wrap;
+  @include phones {
+    justify-content: center;
+  }
+}
+.form__btns {
+  display: flex;
+  justify-content: center;
 }
