--- a/css/main.scss
+++ b/css/main.scss
@@ -40,3 +40,9 @@
 @import './blocks/phone-number';
 @import './blocks/socials';
 @import './blocks/footer';
+
+//slider section
+@import './blocks/arrow';
+@import './blocks/slider-section';
+@import './blocks/slider';
+@import './blocks/dropdown';
