--- a/css/blocks/slider-section.scss
+++ b/css/blocks/slider-section.scss
@@ -1,13 +1,13 @@
 .slider-section {
-  border: 2px dashed red;
+
   background-color: #F8FAF9;
 
 }
 .slider-container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  height: 100%;
-  background: url("../img/icons/order-page/bars1.png") 0 50% / 50% auto no-repeat;
+  //display: flex;
+  //justify-content: flex-end;
+  //align-items: center;
+  //height: 100%;
+  //background: url("../img/icons/order-page/bars1.png") 0 50% / 50% auto no-repeat;
 
 }
