--- a/css/blocks/slider.scss
+++ b/css/blocks/slider.scss
@@ -35,5 +35,23 @@
   font-size: rem(60px);
   color: #151515;
 
-
+}
+.slider__list {
+  display: flex;
+  height: 100%;
+  width: auto;
+  transition: 0.3s ease all;
+}
+.slider__wrapper {
+  max-width: 940px;
+  height: 100%;
+  overflow:hidden;
+}
+.slider__item {
+  width: 100%;
+  height: 100%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
 }
