--- a/css/main.css
+++ b/css/main.css
@@ -931,12 +931,14 @@ a {
 .arrow {
   width: 0.7777777778rem;
   height: 1.5rem;
+  cursor: pointer;
 }
 
 .arrow--left {
   position: absolute;
   top: 41%;
   left: 5%;
+  z-index: 10;
 }
 
 .arrow--right {
@@ -950,16 +952,7 @@ a {
 }
 
 .slider-section {
-  border: 2px dashed red;
   background-color: #F8FAF9;
-}
-
-.slider-container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  height: 100%;
-  background: url("../img/icons/order-page/bars1.png") 0 50%/50% auto no-repeat;
 }
 
 .slider-desc {
@@ -1004,6 +997,28 @@ a {
   display: inline-block;
   font-size: 3.3333333333rem;
   color: #151515;
+}
+
+.slider__list {
+  display: flex;
+  height: 100%;
+  width: auto;
+  transition: 0.3s ease all;
+}
+
+.slider__wrapper {
+  max-width: 940px;
+  height: 100%;
+  overflow: hidden;
+}
+
+.slider__item {
+  width: 100%;
+  height: 100%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
 }
 
 .dropdown__icon-wrapper {
