--- a/css/blocks/hamburger.scss
+++ b/css/blocks/hamburger.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   width: 24px;
   height: 20px;
+  cursor: pointer;
   @include tablets {
     display: inline-flex;
   }
@@ -14,4 +15,15 @@
   border-radius: 10px;
   height: 4px;
   background: #fff;
+}
+.close-icon-wrapper {
+  display: none;
+  width: rem(25px);
+  height: rem(25px);
+  overflow: hidden;
+}
+
+.close-icon {
+  width: 100%;
+  height: 100%;
 }
