--- a/css/blocks/navbar.scss
+++ b/css/blocks/navbar.scss
@@ -30,7 +30,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background: rgba(0,0,0,0.9);
+  background: #313131;
   margin: 0;
   z-index: 10;
   align-items: center;
@@ -45,7 +45,7 @@
     text-align: center;
   }
   .navbar__link {
-    font-size: rem(40px);
+    font-size: rem(36px);
   }
 
 
