--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   padding: rem(20px) rem(40px);
   border-radius: rem(100px);
-
+  border: 1px solid transparent;
   text-transform: uppercase;
   font-weight: 700;
 
@@ -19,6 +19,7 @@
   background: #365A49;
   color: #fff;
   &:hover {
+    border: 1px solid #365A49;
     background: #fff;
     color: #365A49;
   }
