--- a/css/blocks/slider.scss
+++ b/css/blocks/slider.scss
@@ -1,5 +1,11 @@
 .slider-desc {
   max-width: rem(368px);
+  @include tablets {
+    max-width: rem(528px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .slider-desc__title {
   text-transform: uppercase;
@@ -8,24 +14,45 @@
   color: #000;
   margin-bottom: rem(25px);
   line-height: rem(43px);
+  @include tablets {
+    text-align: center;
+    font-size: rem(30px);
+    margin-bottom: rem(14px);
+  }
 }
 .slider-desc__subtitle {
   color: #666666;
   margin-bottom: rem(25px);
+  @include tablets {
+    text-align: center;
+
+  }
 }
 .slider-desc__props {
   max-width: rem(235px);
   display: flex;
   justify-content: space-between;
   margin-bottom: rem(25px);
+  @include tablets {
+    padding-right: rem(30px);
+    max-width: 100%;
+  }
 }
+
 .slider-desc__props-col {
   display: flex;
   flex-direction: column;
+  @include tablets {
+    margin-right: rem(50px);
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 
 .slider-desc__props-name {
   color: #666666;
+
 }
 .slider-desc__props-value {
   color: #000;
@@ -62,6 +89,11 @@
   flex-shrink: 0;
   display: flex;
   align-items: center;
+
+  @include tablets {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .slider__item-img-wrapper {
   flex: 1;
