--- a/css/blocks/hamburger.scss
+++ b/css/blocks/hamburger.scss
@@ -7,6 +7,10 @@
   cursor: pointer;
   @include tablets {
     display: inline-flex;
+    position: fixed;
+    top: 2.5%;
+    right: 2.5%;
+    z-index: 30;
   }
 
 }
