fix full screen menu

--- a/css/blocks/benefits.scss
+++ b/css/blocks/benefits.scss
@@ -13,6 +13,9 @@
   @include phones {
     padding: 0;
     margin-bottom: rem(35px);
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   &:before {
