--- a/css/blocks/hamburger.scss
+++ b/css/blocks/hamburger.scss
@@ -1,33 +1,164 @@
-.hamburger {
+//.hamburger {
+//  display: none;
+//  flex-direction: column;
+//  justify-content: space-between;
+//  width: 24px;
+//  height: 20px;
+//  cursor: pointer;
+//  @include tablets {
+//    display: inline-flex;
+//    position: fixed;
+//    top: 2.5%;
+//    right: 2.5%;
+//    z-index: 30;
+//  }
+//
+//}
+//.hamburger__item {
+//  display: block;
+//  border-radius: 10px;
+//  height: 4px;
+//  background: #fff;
+//}
+//.close-icon-wrapper {
+//  display: none;
+//  width: rem(25px);
+//  height: rem(25px);
+//  overflow: hidden;
+//}
+//
+//.close-icon {
+//  width: 100%;
+//  height: 100%;
+//}
+
+body,html{
+  height: 100%;
+  width: 100%;
+  padding:0;
+  margin:0;
+}
+
+a{
+  color:white;
+  text-decoration: none;
+}
+
+ul,li{
+  list-style: none;
+  padding:0;
+  margin:0;
+}
+
+.burger{
   display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 24px;
-  height: 20px;
-  cursor: pointer;
+  position: fixed;
+  top:3%;
+  right: 5%;
+  height: 25px;
+  width: 35px;
+  cursor:pointer;
+  z-index: 15;
+  transition:all .4s;
   @include tablets {
-    display: inline-flex;
-    position: fixed;
-    top: 2.5%;
-    right: 2.5%;
-    z-index: 30;
+    display: block;
   }
 
-}
-.hamburger__item {
-  display: block;
-  border-radius: 10px;
-  height: 4px;
-  background: #fff;
-}
-.close-icon-wrapper {
-  display: none;
-  width: rem(25px);
-  height: rem(25px);
-  overflow: hidden;
+  &__line{
+    width: 100%;
+    height: 4px;
+    border-radius: 10px;
+    position: absolute;
+    background-color: #fff;
+    top:0;
+    left: 0;
+    transition:all .4s;
+
+
+    &:nth-child(2){
+      top:50%;
+      transform:translateY(-50%);
+    }
+
+    &:nth-child(3){
+      bottom:0;
+      top:initial;
+    }
+  }
 }
 
-.close-icon {
+.content{
+  background-color: black;
+  opacity: .8;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items:center;
+  justify-content: center;
+
+}
+
+.overlay{
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  transition:all .4s;
+
+  position:fixed;
+  top:0;
+  left:100%;
+  opacity:0;
   width: 100%;
   height: 100%;
+  z-index: 10;
+}
+
+.menu{
+  &__item{
+    font-size: 36px;
+    margin-bottom:20px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+
+    &:last-child{
+      margin-bottom:0;
+
+    }
+  }
+
+  &__link{
+    &:hover{
+      opacity:.7;
+
+    }
+  }
+}
+
+.burger--active{
+  .burger__line{
+    &:nth-child(1){
+      opacity:0;
+    }
+
+    &:nth-child(2){
+      transform:rotate(45deg);
+    }
+
+    &:nth-child(3){
+      transform:rotate(-45deg) translateY(-8px) translateX(5px);
+    }
+  }
+}
+
+.overlay--active{
+  left: 0;
+  opacity:1;
+}
+
+.body--active-menu{
+  overflow:hidden;
 }
