--- a/css/blocks/arrow.scss
+++ b/css/blocks/arrow.scss
@@ -3,6 +3,7 @@
   height: rem(27px);
   cursor: pointer;
 
+
 }
 .arrow--left {
   position: absolute;
@@ -19,9 +20,11 @@
   position: absolute;
   top: 41%;
   right: 5%;
+  z-index: 10;
 }
 .arrow--left-icon {
   transform: rotate(180deg);
+
 
 }
 .arrow--right-icon {
