--- a/css/main.css
+++ b/css/main.css
@@ -1099,6 +1099,7 @@ ul, li {
   position: absolute;
   top: 41%;
   right: 5%;
+  z-index: 10;
 }
 
 .arrow--left-icon {
@@ -1144,6 +1145,11 @@ ul, li {
 @media screen and (max-width: 768px) {
   .slider-desc__subtitle {
     text-align: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .slider-desc__subtitle {
+    padding: 0 40px;
   }
 }
 
