--- a/css/blocks/slider-section.scss
+++ b/css/blocks/slider-section.scss
@@ -4,6 +4,8 @@
 
 }
 .slider-container {
+  position: relative;
+  padding: 0 40px;
   //display: flex;
   //justify-content: flex-end;
   //align-items: center;
