--- a/css/blocks/reviews.scss
+++ b/css/blocks/reviews.scss
@@ -94,3 +94,24 @@
     border-color: #0f5a47;
   }
 }
+
+.reviews__item {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  transition: 0.3s;
+  opacity: 0;
+  pointer-events: none;
+}
+.reviews__item--active {
+  position: static;
+  opacity: 1;
+  pointer-events: unset;
+}
+
+.reviews__list {
+  position: relative;
+  min-height: rem(280px);
+}
