--- a/css/main.css
+++ b/css/main.css
@@ -780,6 +780,28 @@ ul, li {
   border-color: #0f5a47;
 }
 
+.reviews__item {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  transition: 0.3s;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.reviews__item--active {
+  position: static;
+  opacity: 1;
+  pointer-events: unset;
+}
+
+.reviews__list {
+  position: relative;
+  min-height: 15.5555555556rem;
+}
+
 .interactive-avatar {
   width: 4.4444444444rem;
   height: 4.4444444444rem;
@@ -1084,21 +1106,15 @@ ul, li {
 
 .arrow--left {
   position: absolute;
-  top: 41%;
-  left: 5%;
+  top: 50%;
+  left: 0;
   z-index: 10;
-}
-@media screen and (max-width: 768px) {
-  .arrow--left {
-    top: 41.2%;
-    left: 10%;
-  }
 }
 
 .arrow--right {
   position: absolute;
-  top: 41%;
-  right: 5%;
+  top: 50%;
+  right: 0;
   z-index: 10;
 }
 
@@ -1108,6 +1124,11 @@ ul, li {
 
 .slider-section {
   background-color: #F8FAF9;
+}
+
+.slider-container {
+  position: relative;
+  padding: 0 40px;
 }
 
 .slider-desc {
@@ -1316,6 +1337,50 @@ ul, li {
   transition: opacity 0.2s;
   opacity: 0;
   z-index: 20;
+}
+
+.accordion-section {
+  color: #292929;
+  width: 221px;
+}
+
+.accordion-section__header {
+  cursor: pointer;
+  font-size: 1.1666666667rem;
+  font-weight: 700;
+}
+
+.accordion-section__text {
+  color: #666666;
+  font-weight: 300;
+  max-height: 100px;
+  overflow: hidden;
+  transition: max-height 1s ease;
+}
+
+.team-list {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.team-list__img-wrapper {
+  width: 220px;
+  height: 290px;
+  overflow: hidden;
+}
+
+.beard .team-list__img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url("../img/icons/team-page/beard.jpg") 35% 100% no-repeat;
+}
+
+.smile-girl .team-list__img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url("../img/icons/team-page/smile-girl.jpg") 35% 100% no-repeat;
 }
 
 /*# sourceMappingURL=main.css.map */
