--- a/css/main.scss
+++ b/css/main.scss
@@ -46,3 +46,7 @@
 @import './blocks/slider-section';
 @import './blocks/slider';
 @import './blocks/dropdown';
+
+//team section
+@import './blocks/accordion';
+@import './blocks/team-list';
