--- a/css/main.scss
+++ b/css/main.scss
@@ -49,4 +49,5 @@
 
 //team section
 @import './blocks/accordion';
-@import './blocks/team-list';
+@import './blocks/team';
+@import './blocks/modal';
