--- a/css/blocks/modal.scss
+++ b/css/blocks/modal.scss
@@ -1,27 +1,36 @@
-.modal {
-  &.error-modal {
-    .moda.__content {
-      color: red;
-    }
-  }
-  &.fancybox-content {
-    padding-left: 0 !important;
-  }
 
-  .fancybox-button {
-    display: none;
-  }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: #313131;
+}
+.modal-content {
+  position: relative;
+  height: 180px;
+  width: 310px;
+  border: 1px solid #000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.modal__container {
-  background: #fff;
-  padding: 35px 60px;
+.modal__block {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  background: #fff;
+  width: 100%;
+  height: 100%;
 }
 
-.modal__content {
-  margin-bottom: 15px;
+.modal__title {
   color: #000;
+  margin-bottom: 18px;
 }
