--- a/css/main.css
+++ b/css/main.css
@@ -1534,4 +1534,9 @@ ul, li {
   margin-bottom: 18px;
 }
 
+.modal__title-error {
+  color: red;
+  text-align: center;
+}
+
 /*# sourceMappingURL=main.css.map */
