add accordion section

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,7 @@
 @import './blocks/dropdown';
 
 //team section
-@import './blocks/accordion';
 @import './blocks/team';
 @import './blocks/modal';
+@import './blocks/accordion-section';
+
