--- a/css/main.scss
+++ b/css/main.scss
@@ -50,5 +50,6 @@
 //team section
 @import './blocks/team';
 @import './blocks/modal';
-@import './blocks/accordion-section';
+@import './blocks/accordion';
+@import './blocks/sizes';
 
