--- a/css/blocks/accordion.css
+++ b/css/blocks/accordion.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 .accordion {
-  background: url("../img/girl.png") center center/cover no-repeat;
+  background: url("../img/icons/acc-page/acc-menu.jpg") center center/cover no-repeat;
 }
 
 .accordion__container {
@@ -85,22 +85,23 @@
   display: flex;
 }
 
-.sizes__item_silver {
-  background: #999999;
-}
-
-.sizes__item_black {
-  background: #151515;
-}
-
-.sizes__item_red {
-  background: #E01F3D;
-}
-
 .sizes__item-title {
+  filter: brightness(20%);
   position: relative;
-  min-width: 80px;
+  min-width: 90px;
   height: 100%;
+}
+
+.sizes__item-title_milk {
+  background: url("../img/icons/acc-page/coco.jpg") center center/cover no-repeat;
+}
+
+.sizes__item-title_breakfast {
+  background: url("../img/icons/acc-page/breakfast.jpg") center center/cover no-repeat;
+}
+
+.sizes__item-title_berries {
+  background: url("../img/icons/acc-page/berries.jpg") center center/cover no-repeat;
 }
 
 .sizes__item-title span {
@@ -142,4 +143,4 @@
   color: #ffffff;
 }
 
-/*# sourceMappingURL=accordion-section.css.map */
+/*# sourceMappingURL=accordion.css.map */
