--- a/css/blocks/map-section.scss
+++ b/css/blocks/map-section.scss
@@ -8,7 +8,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("../img/icons/map-section/map.jpg") center center / cover no-repeat;
+  //background: url("../img/icons/map-section/map.jpg") center center / cover no-repeat;
 }
 
 .footer {
