--- a/css/layout/base.scss
+++ b/css/layout/base.scss
@@ -22,7 +22,7 @@ body {
     line-height: 1.42;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /*position: relative;*/
+     position: relative;
 }
 a {
     color: #ffffff;
@@ -31,7 +31,7 @@ a {
 .wrapper {
     width: 100%;
     overflow: hidden;
-    min-height: 100%;
+    height: 100%;
     position: relative;
 }
 
@@ -50,4 +50,10 @@ a {
 }
 .body--active-menu {
     overflow: hidden;
+}
+.maincontent {
+    height: 100%;
+    transition: transform 0.8s;
+    will-change: transform;
+    //transform: translateY(-200%);
 }
