--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /*position: relative;*/
+  position: relative;
 }
 
 a {
@@ -37,7 +37,7 @@ a {
 .wrapper {
   width: 100%;
   overflow: hidden;
-  min-height: 100%;
+  height: 100%;
   position: relative;
 }
 
@@ -58,6 +58,12 @@ a {
 
 .body--active-menu {
   overflow: hidden;
+}
+
+.maincontent {
+  height: 100%;
+  transition: transform 0.8s;
+  will-change: transform;
 }
 
 .hero {
