--- a/css/blocks/fixed-menu.scss
+++ b/css/blocks/fixed-menu.scss
@@ -7,9 +7,11 @@
     display: none;
   }
 }
+
 .fixed-menu__item {
 
   margin-bottom: rem(5px);
+
   &:last-child {
     margin-bottom: 0;
   }
@@ -50,5 +52,32 @@
     height: rem(6px);
     border-radius: 50%;
 
+  }
+}
+
+.fixed-menu-shadowed {
+  .fixed-menu__list {
+
+    .fixed-menu__item {
+      .fixed-menu__link {
+        &:before {
+          background: #365A49;
+        }
+      }
+
+
+      &--active {
+        .fixed-menu__link {
+          border: rem(1px) solid #365A49;
+        }
+      }
+
+      &:hover {
+        .fixed-menu__link {
+          border: rem(1px) solid #365A49;
+        }
+      }
+
+    }
   }
 }
