--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -2,7 +2,8 @@
   background: url("../img/icons/main-page/tracery.png") right bottom no-repeat;
   background-color: #61C4D9;
   position: relative;
-  height: 100vh;
+  //height: 100vh;
+  height: 100%;
   min-height: rem(650px);
   position: relative;
 
