--- a/css/main.scss
+++ b/css/main.scss
@@ -52,4 +52,7 @@
 @import './blocks/modal';
 @import './blocks/accordion';
 @import './blocks/sizes';
+@import './blocks/video';
+@import './blocks/sound';
+@import './blocks/duration';
 
