--- a/css/main.css
+++ b/css/main.css
@@ -1682,4 +1682,131 @@ ul, li {
   color: #ffffff;
 }
 
+.video-section {
+  position: relative;
+}
+.video-section:before {
+  content: url("../img/icons/player-page/section/blackberry-and-leaves.png");
+  position: absolute;
+  bottom: -115px;
+  right: 0;
+  z-index: 10;
+}
+
+.video__container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.video__container:after {
+  content: url("../img/icons/player-page/section/video-leaf-top.png");
+  position: absolute;
+  top: -70px;
+  right: 111px;
+}
+.video__container:before {
+  content: url("../img/icons/player-page/section/video-leaf-bottom.png");
+  position: absolute;
+  bottom: -70px;
+  left: 90px;
+}
+
+.video__player {
+  position: relative;
+  max-width: 660px;
+  /* max-height: 365px; */
+}
+
+.video__player-img {
+  position: absolute;
+  left: 307px;
+  top: 149px;
+  cursor: pointer;
+}
+
+.video__player-img--active {
+  opacity: 0;
+}
+
+#player {
+  min-width: 660px;
+  max-width: 660px;
+  min-height: 370px;
+  max-height: 370px;
+}
+
+.video__toolbar {
+  overflow: hidden;
+  width: 657px;
+  height: 35px;
+  background-color: #3e3e3e;
+  margin-top: -8px;
+  display: flex;
+}
+
+.sound {
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+
+.sound__mic {
+  cursor: pointer;
+}
+
+.sound__volume {
+  margin-left: 30px;
+  margin-top: -5px;
+}
+
+.duration {
+  display: flex;
+  align-items: center;
+}
+
+.duration__img {
+  padding: 5px 20px;
+  cursor: pointer;
+}
+
+.duration__length {
+  width: 444px;
+  height: 4px;
+  border-radius: 1px;
+  background-color: #626262;
+  -webkit-appearance: none;
+  /*Override default CSS styles*/
+  appearance: none;
+  outline: none;
+}
+
+.duration__length--other {
+  width: 58px;
+  height: 4px;
+}
+
+.duration__length::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  /* Override default look */
+  appearance: none;
+  background: #626262;
+  cursor: pointer;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+}
+
+.duration__circle {
+  cursor: pointer;
+  margin-top: -4px;
+  display: block;
+}
+
+.duration__circle--high {
+  right: 0;
+  position: absolute;
+}
+
 /*# sourceMappingURL=main.css.map */
